animations added fully

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,10 +1,10 @@
 <div class="pt-md-5 container-fluid">
-    <div class="row mx-0 mt-4 mb-md-4 w-100">
+    <div class="row mx-0 my-5 py-3 w-100">
         <div class="col-sm-2"></div>
-        <div class="col-12 col-md-4">
-            <img src="assets/about.jpg" alt="A picture of Kavin Arulnambi" class="img-fluid">
+        <div class="col-12 col-md-4"data-aos="fade-down-right">
+            <img src="assets/about.jpg" alt="A picture of Kavin Arulnambi" class="img-fluid" >
         </div>
-        <div class="col-12 col-md-4">
+        <div class="col-12 col-md-4" data-aos="fade-up-left">
             <div class="about-card h-100 d-flex align-items-center">
                 <div>
                     <h1>Hi, i am Kavin Arulnambi,<br>a Freelance Artist from Chennai, India</h1>
@@ -14,51 +14,55 @@
             </div>
         </div>
     </div>
-    <div class="row mx-auto mt-md-5 pt-md-5 container text-center">
-        <h3 class="fs-1 mb-3"><strong>Skills</strong></h3>
-        <div class="content-grid-2 mb-5">
-            <div class="content-item">
-                <img src="assets/aboutme/3d-modelling.png" alt="3D Modelling Icon">
-                <p class="content-head">3D Modelling</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/3d-rendering.png" alt="3D Animation Icon">
-                <p class="content-head">3D Animation</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/photography.png" alt="Photography Icon">
-                <p class="content-head">Photography</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/art.png" alt="Digital / Traditional Art Icon">
-                <p class="content-head">Digital / Traditional Art</p>
+    <div class="row mx-auto pt-md-5 container text-center">
+        <div data-aos="flip-up">
+            <h3 class="fs-1 mb-3"><strong>Skills</strong></h3>
+            <div class="content-grid-2 mb-5" data-aos="fade-in" data-aos-delay="500">
+                <div class="content-item">
+                    <img src="assets/aboutme/3d-modelling.png" alt="3D Modelling Icon">
+                    <p class="content-head">3D Modelling</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/3d-rendering.png" alt="3D Animation Icon">
+                    <p class="content-head">3D Animation</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/photography.png" alt="Photography Icon">
+                    <p class="content-head">Photography</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/art.png" alt="Digital / Traditional Art Icon">
+                    <p class="content-head">Digital / Traditional Art</p>
+                </div>
             </div>
         </div>
-        <h3 class="fs-1 mb-3"><strong>Tools</strong></h3>
-        <div class="content-grid-3">
-            <div class="content-item">
-                <img src="assets/aboutme/blender-3d.png" alt="Blender Icon">
-                <p class="content-head">Blender</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/houdini.png" alt="Houdini Icon">
-                <p class="content-head">Houdini</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/adobe-photoshop.png" alt="Adobe Photoshop Icon">
-                <p class="content-head">Adobe Photoshop</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/3ds-max.png" alt="Autodesk 3ds Max Icon">
-                <p class="content-head">Autodesk 3ds Max</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/adobe-after-effects.png" alt="Adobe After Effects Icon">
-                <p class="content-head">Adobe After Effects</p>
-            </div>
-            <div class="content-item">
-                <img src="assets/aboutme/adobe-premiere-pro.png" alt="Adobe Premiere Pro Icon">
-                <p class="content-head">Adobe Premiere Pro</p>
+        <div data-aos="flip-up">
+            <h3 class="fs-1 mb-3"><strong>Tools</strong></h3>
+            <div class="content-grid-3" data-aos="fade-in" data-aos-delay="500">
+                <div class="content-item">
+                    <img src="assets/aboutme/blender-3d.png" alt="Blender Icon">
+                    <p class="content-head">Blender</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/houdini.png" alt="Houdini Icon">
+                    <p class="content-head">Houdini</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/adobe-photoshop.png" alt="Adobe Photoshop Icon">
+                    <p class="content-head">Adobe Photoshop</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/3ds-max.png" alt="Autodesk 3ds Max Icon">
+                    <p class="content-head">Autodesk 3ds Max</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/adobe-after-effects.png" alt="Adobe After Effects Icon">
+                    <p class="content-head">Adobe After Effects</p>
+                </div>
+                <div class="content-item">
+                    <img src="assets/aboutme/adobe-premiere-pro.png" alt="Adobe Premiere Pro Icon">
+                    <p class="content-head">Adobe Premiere Pro</p>
+                </div>
             </div>
         </div>
         <p class="text-end">Icons from <a href="http://icons8.com" target="_blank" rel="noopener noreferrer">icons8.com</a></p>
