--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>
     <app-navbar></app-navbar>
     <app-social-nav></app-social-nav>
-    <div style="margin-top: 56px;" class="bg-dark">
+    <div style="margin-top: 56px; max-width: 100vw;" class="bg-dark">
         <router-outlet></router-outlet>
     </div>
     <app-footer></app-footer>
