--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 html,body
     min-height: 100vh
-    
+    max-width: 100vw
+    overflow-x: hidden
+
 body
     font-family: 'Poppins', 'Segoe UI'
-    overflow-x: hidden
     
 .full-body
     min-height: calc(100vh - 56px)
