clientel section, pinterest link added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<section id="header" class="d-flex container-fluid full-body bg-dark" style="background-image: url('assets/home_bg.jpg');">
+<section id="header" class="d-flex container-fluid full-body bg-dark" style="background-image: url('assets/home_gif.gif');">
     <div class="container-fluid d-flex align-items-center">
         <div class="card ms-auto">
             <div class="card-body px-2 py-4">
@@ -61,6 +61,7 @@
         <div class="elfsight-app-c146a3cf-398b-41b6-8053-f2baa3b69704"></div>    
     </div>
 </section>
+<app-client-works data-aos="fade-up"></app-client-works>
 <!-- Projects -->
 <section id="projects" class="container-fluid py-4 bg-dark">
     <h1 class="text-center t-title mb-3" data-aos="fade-up">Projects</h1>
