--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -52,7 +52,7 @@
     background-attachment: local
     background-size: cover
     background-repeat: no-repeat
-    background-position-y: top
+    background-position: center
 
     .card-title
         font-weight: 700
